// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryFilter should render without throwing an error 1`] = `
<div
  class="queryFilter"
  data-component="query-filter"
>
  <div
    class="TextBox wide showIconAffordance clearable textbox selected"
    data-component="textbox"
  >
    <div
      class="Wrapper textboxWrapper"
    >
      <input
        autocomplete="none"
        class=""
        data-part="input"
        placeholder="Search by City, State, Region or Community Name"
        tabindex="0"
        type="text"
        value=""
      />
      <div
        class="affordance-holder"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M9.5,3C13.1,3,16,5.9,16,9.5c0,1.6-0.6,3.1-1.6,4.2l0.3,0.3h0.8l5,5L19,20.5l-5-5v-0.8l-0.3-0.3c-1.1,1-2.6,1.6-4.2,1.6C5.9,16,3,13.1,3,9.5C3,5.9,5.9,3,9.5,3z M9.5,5C7,5,5,7,5,9.5C5,12,7,14,9.5,14C12,14,14,12,14,9.5C14,7,12,5,9.5,5z"
          />
        </svg>
      </div>
      <div
        class="clear-box"
        data-component="textbox-clear"
        tabindex="0"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M17.6,19L12,13.4L6.4,19L5,17.6l5.6-5.6L5,6.4L6.4,5l5.6,5.6L17.6,5L19,6.4L13.4,12l5.6,5.6L17.6,19z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`QueryFilter when user types something in the input should show matching properties even when the text contain blank spaces before and after the partial text 1`] = `
<div
  class="queryFilter"
  data-component="query-filter"
>
  <div
    class="TextBox wide showIconAffordance clearable textbox selected"
    data-component="textbox"
  >
    <div
      class="Wrapper textboxWrapper"
    >
      <input
        autocomplete="none"
        class=""
        data-part="input"
        placeholder="Search by City, State, Region or Community Name"
        tabindex="0"
        type="text"
        value="   Alps P   "
      />
      <div
        class="affordance-holder"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M9.5,3C13.1,3,16,5.9,16,9.5c0,1.6-0.6,3.1-1.6,4.2l0.3,0.3h0.8l5,5L19,20.5l-5-5v-0.8l-0.3-0.3c-1.1,1-2.6,1.6-4.2,1.6C5.9,16,3,13.1,3,9.5C3,5.9,5.9,3,9.5,3z M9.5,5C7,5,5,7,5,9.5C5,12,7,14,9.5,14C12,14,14,12,14,9.5C14,7,12,5,9.5,5z"
          />
        </svg>
      </div>
      <div
        class="clear-box"
        data-component="textbox-clear"
        tabindex="0"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M17.6,19L12,13.4L6.4,19L5,17.6l5.6-5.6L5,6.4L6.4,5l5.6,5.6L17.6,5L19,6.4L13.4,12l5.6,5.6L17.6,19z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="list results"
    data-component="list"
  >
    <div
      class="main-section"
    >
      <div>
        <div
          class="list-item simple group-section"
          data-component="list-item"
        >
          COMMUNITIES
        </div>
        <div
          class="list-item hoverable clickable simple result-item"
          data-component="list-item"
          tabindex="0"
        >
          Alps Park Apartments, Rapid City, South Dakota
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QueryFilter when user types something in the input should show matching results to the partial text typed in the input 1`] = `
<div
  class="queryFilter"
  data-component="query-filter"
>
  <div
    class="TextBox wide showIconAffordance clearable textbox selected"
    data-component="textbox"
  >
    <div
      class="Wrapper textboxWrapper"
    >
      <input
        autocomplete="none"
        class=""
        data-part="input"
        placeholder="Search by City, State, Region or Community Name"
        tabindex="0"
        type="text"
        value="Alps P"
      />
      <div
        class="affordance-holder"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M9.5,3C13.1,3,16,5.9,16,9.5c0,1.6-0.6,3.1-1.6,4.2l0.3,0.3h0.8l5,5L19,20.5l-5-5v-0.8l-0.3-0.3c-1.1,1-2.6,1.6-4.2,1.6C5.9,16,3,13.1,3,9.5C3,5.9,5.9,3,9.5,3z M9.5,5C7,5,5,7,5,9.5C5,12,7,14,9.5,14C12,14,14,12,14,9.5C14,7,12,5,9.5,5z"
          />
        </svg>
      </div>
      <div
        class="clear-box"
        data-component="textbox-clear"
        tabindex="0"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M17.6,19L12,13.4L6.4,19L5,17.6l5.6-5.6L5,6.4L6.4,5l5.6,5.6L17.6,5L19,6.4L13.4,12l5.6,5.6L17.6,19z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="list results"
    data-component="list"
  >
    <div
      class="main-section"
    >
      <div>
        <div
          class="list-item simple group-section"
          data-component="list-item"
        >
          COMMUNITIES
        </div>
        <div
          class="list-item hoverable clickable simple result-item"
          data-component="list-item"
          tabindex="0"
        >
          Alps Park Apartments, Rapid City, South Dakota
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QueryFilter when user types something in the input when the partial text typed does not match any property should show a message informing that no matching properties were found 1`] = `
<div
  class="queryFilter"
  data-component="query-filter"
>
  <div
    class="TextBox wide showIconAffordance clearable textbox selected"
    data-component="textbox"
  >
    <div
      class="Wrapper textboxWrapper"
    >
      <input
        autocomplete="none"
        class=""
        data-part="input"
        placeholder="Search by City, State, Region or Community Name"
        tabindex="0"
        type="text"
        value="   NotFound   "
      />
      <div
        class="affordance-holder"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M9.5,3C13.1,3,16,5.9,16,9.5c0,1.6-0.6,3.1-1.6,4.2l0.3,0.3h0.8l5,5L19,20.5l-5-5v-0.8l-0.3-0.3c-1.1,1-2.6,1.6-4.2,1.6C5.9,16,3,13.1,3,9.5C3,5.9,5.9,3,9.5,3z M9.5,5C7,5,5,7,5,9.5C5,12,7,14,9.5,14C12,14,14,12,14,9.5C14,7,12,5,9.5,5z"
          />
        </svg>
      </div>
      <div
        class="clear-box"
        data-component="textbox-clear"
        tabindex="0"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M17.6,19L12,13.4L6.4,19L5,17.6l5.6-5.6L5,6.4L6.4,5l5.6,5.6L17.6,5L19,6.4L13.4,12l5.6,5.6L17.6,19z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="list results"
    data-component="list"
  >
    <div
      class="no-results"
    >
      <p
        class="textElement Caption primary secondary raw"
        data-component="Caption"
        data-text-element="true"
      >
        No match found. To view a list of cities, please see the bottom of this page
      </p>
    </div>
  </div>
</div>
`;
